--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "watch-benchmarks": "nodemon --watch benchmarks/src --exec \"cd benchmarks; npx webpack --config webpack.config.js\"",
     "watch-worker": "nodemon --watch examples/worker/src --exec \"cd examples/worker; npx webpack --config webpack.config.js\"",
     "test": "jest",
-    "test:coverage": "jest --coverage && ./node_modules/coveralls/bin/coveralls.js < coverage/lcov.info"
+    "test:coverage": "jest --coverage && node_modules/coveralls/bin/coveralls.js < coverage/lcov.info"
   },
   "jest": {
     "collectCoverageFrom": [
