--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@alexanderolsen/libsamplerate-js",
-  "version": "1.1.61",
-  "description": "Resample audio in-browser using a web assembly port of libsamplerate.",
+  "version": "1.2.0",
+  "description": "Resample audio in node or browser using a webassembly port of libsamplerate.",
   "keywords": [
     "web assembly",
     "wasm",
@@ -13,7 +13,8 @@
     "audio",
     "sample rate converter",
     "src",
-    "dsp"
+    "dsp",
+    "node"
   ],
   "main": "./dist/libsamplerate.js",
   "directories": {
@@ -21,7 +22,7 @@
   },
   "scripts": {
     "build": "npx webpack",
-    "compile-wasm": "echo 'You might need to add emcc to path first. More info at https://github.com/emscripten-core/emscripten/issues/5696'; emcc --bind -o src/glue.js src/libsamplerate-wrapper.cpp lib/libsamplerate.a -s MODULARIZE -s EXPORT_NAME='LoadSRC' -s ENVIRONMENT='web' -s ALLOW_MEMORY_GROWTH='1' -O3; mv src/glue.wasm dist/libsamplerate.wasm",
+    "compile-wasm": "emcc --bind -o src/glue.js src/libsamplerate-wrapper.cpp lib/libsamplerate.a -s MODULARIZE -s EXPORT_NAME='LoadSRC' -s ALLOW_MEMORY_GROWTH='1' -O3; mv src/glue.wasm dist/libsamplerate.wasm",
     "watch-js": "nodemon --watch src --exec \"npx webpack --config webpack.config.js\"",
     "watch-cpp": "nodemon --watch src/*.cpp --watch src/*.h --exec \"npm run compile-wasm\"",
     "watch-benchmarks": "nodemon --watch benchmarks/src --exec \"cd benchmarks; npx webpack --config webpack.config.js\"",
