--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,3 @@
 {
-	"presets": ["@babel/preset-env"],
-	"plugins": ["transform-class-properties"]
+	"presets": ["@babel/preset-env", "@babel/preset-typescript"],
 }
