--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@alexanderolsen/libsamplerate-js",
-  "version": "1.4.2",
+  "version": "1.4.3",
   "description": "Resample audio in node or browser using a webassembly port of libsamplerate.",
   "keywords": [
     "web assembly",
@@ -84,7 +84,5 @@
     "webpack-cli": "^4.3.1",
     "worker-loader": "^3.0.7"
   },
-  "dependencies": {
-    "prettier": "^2.4.0"
-  }
+  "dependencies": {}
 }
