fix test action

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -28,7 +28,4 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
 
         run: |
-          yarn package
-          yarn lint
-          yarn tsc
-          yarn test
+          npm run test
