--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
   ],
   "scripts": {
     "build": "npx webpack",
-    "compile-wasm": "emcc --bind -o src/glue.js src/libsamplerate-wrapper.cpp lib/libsamplerate.a -s MODULARIZE -s EXPORT_NAME='LoadSRC' -s ALLOW_MEMORY_GROWTH='1' -O3; mv src/glue.wasm dist/libsamplerate.wasm",
+    "compile-library-docker": "scripts/library/build_library_docker.sh",
+    "compile-wasm-docker": "scripts/build_docker.sh",
+    "compile-wasm": "scripts/build_emscripten.sh",
     "watch-ts": "nodemon --watch src --exec \"npx webpack\"",
     "watch-cpp": "nodemon --watch src/*.cpp --watch src/*.h --exec \"npm run compile-wasm\"",
     "watch-benchmarks": "nodemon --watch benchmarks/src --exec \"cd benchmarks; npx webpack --config webpack.config.js\"",
@@ -74,5 +76,8 @@
     "webpack-cli": "^4.3.1",
     "worker-loader": "^3.0.7"
   },
-  "dependencies": {}
+  "dependencies": {},
+  "browser": {
+    "fs": false
+  }
 }
