--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "babel-polyfill": "^6.26.0",
     "coveralls": "^3.1.0",
     "eslint": "^7.32.0",
+    "ignore-loader": "^0.1.2",
     "jest": "^27.0.6",
     "nodemon": "^2.0.7",
     "react": "^17.0.1",
