--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@alexanderolsen/libsamplerate-js",
-  "version": "2.0.0",
+  "version": "2.0.2",
   "description": "Resample audio in node or browser using a webassembly port of libsamplerate.",
   "keywords": [
     "web assembly",
@@ -67,6 +67,7 @@
     "ignore-loader": "^0.1.2",
     "jest": "^29.2.2",
     "nodemon": "^2.0.7",
+    "path-browserify": "^1.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "^5.0.1",
