--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,5 +19,6 @@
     "skipLibCheck": true
   },
   "include": ["src"],
-  "exclude": ["node_modules", "src/__mocks__"]
+  "exclude": ["node_modules", "src/__mocks__"],
+  "files": ["src/types/global.d.ts"]
 }
